more consistent app data folder names

--- a/pocketbase/docker-compose.yml
+++ b/pocketbase/docker-compose.yml
@@ -12,6 +12,6 @@ services:
     restart: on-failure
     stop_grace_period: 1m
     volumes:
-      - ${APP_DATA_DIR}/data/data:/pb_data
-      - ${APP_DATA_DIR}/data/public:/pb_public
-      - ${APP_DATA_DIR}/data/hooks:/pb_hooks
+      - ${APP_DATA_DIR}/app/data:/pb_data
+      - ${APP_DATA_DIR}/app/public:/pb_public
+      - ${APP_DATA_DIR}/app/hooks:/pb_hooks
