--- a/umami/umbrel-app.yml
+++ b/umami/umbrel-app.yml
@@ -12,6 +12,11 @@ description: >-
   Umami makes it easy to collect, analyze, and understand your web data — while maintaining visitor privacy and data ownership.
 
 
+  ⚠️ Note
+
+  Change the default password by clicking on the avatar in the top right corner and on 'profile'.
+
+
   😌 Easy to use
   
   Umami is easy to use and understand without needing to run complicated reports. All data is available at a glance.
@@ -34,57 +39,5 @@ support: https://github.com/umami-software/umami/discussions
 gallery:
   - 1.jpg
   - 2.jpg
-#path: /web
-
-# If the user needs to know about a default username and password, you can specify it here. (optional)
-#defaultUsername: admin
-#defaultPassword: admin
-
-# If true, Umbrel will generate a deterministic password for the app. (optional)
-# It will be shown to the user in the Umbrel UI and can be used inside the docker-compose.yml as the $APP_PASSWORD variable.
-# This will also override the defaultPassword if set.
-#deterministicPassword: false
-
-# If the app is optimized for the Umbrel Home (https://umbrel.com/umbrel-home), you can specify it here. (optional)
-#optimizedForUmbrelHome: false
-
-# If true, the app is only accessible via Tor. (optional)
-# Users will need to access their Umbrel in a Tor browser on their remote access URL (Settings > Remote Tor access) to open the app.
-#torOnly: false
-
-# If the size of the app is known, you can specify it here. (optional)
-# It will be shown on the "Install" button in the App Store.
-# IMPORTANT: The size needs to be in bytes.
-#installSize: 10000
-
-# Widgets are small UI elements that can be shown on the Umbrel home screen. (optional)
-# You can specify an array of widgets.
-# Examples:
-# The ID should be unique within the app and contain only alphabets (a-z) and dashes (-)
-#- id: "disk-usage"
-#  # The type of the widget. Available widgets are: "text-with-buttons", "text-with-progress",
-#  # "two-stats-with-guage", "three-stats", "four-stats", "list-emoji" and "list".
-#  # To see how they look, visit http://umbrel.local/stories/widgets.
-#  type: "text-with-progress"
-#  # How often the widget should update. See all available options here: https://github.com/vercel/ms/blob/main/readme.md
-#  refresh: "1m"
-#  # The endpoint to fetch the data from.
-#  # The hostname is the service from the docker-compose.yml.
-#  endpoint: "server:80/api/widgets/disk-usage"
-#  # On click of the widget, the app will open. (optional)
-#  # The link (which is actually a path) will be appended to the app's URL.
-#  # When the link is an empty string, the app will open as if the icon was clicked.
-#  link: "/disk-usage"
-#  # An example of the widget to show off the widget in the widget picker.
-#  example:
-#    type: "text-with-progress"
-#    link: ""
-#    title: "Time Machine Usage"
-#    text: "420 GB"
-#    progressLabel: "580 GB left"
-#    progress: 0.42
-#widgets: []
-
-# If you are opening the terminal of an app (Settings > Advanced settings > Terminal), you can specify the default docker compose service name here. (optional)
-# This is useful, if you have multiple services in your docker-compose.yml and want to open the terminal of a specific service.
-#defaultShell: app
+defaultUsername: admin
+defaultPassword: umami
