--- a/umami/umbrel-app.yml
+++ b/umami/umbrel-app.yml
@@ -37,7 +37,9 @@ submission: https://github.com/getumbrel/umbrel-apps/pull/<number>
 repo: https://github.com/umami-software/umami
 support: https://github.com/umami-software/umami/discussions
 gallery:
-  - 1.jpg
-  - 2.jpg
+  - 1.png
+  - 2.png
+  - 3.png
+  - 4.png
 defaultUsername: admin
 defaultPassword: umami
