added pull request

--- a/umami/umbrel-app.yml
+++ b/umami/umbrel-app.yml
@@ -33,7 +33,7 @@ description: >-
 developer: Umami
 website: https://umami.is
 submitter: Sharknoon
-submission: https://github.com/getumbrel/umbrel-apps/pull/<number>
+submission: https://github.com/getumbrel/umbrel-apps/pull/1083
 repo: https://github.com/umami-software/umami
 support: https://github.com/umami-software/umami/discussions
 gallery:
