change REDIS_SERVER_HOST to actual container name

--- a/affine/docker-compose.yml
+++ b/affine/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     environment:
       - NODE_OPTIONS="--import=./scripts/register.js"
       - AFFINE_CONFIG_PATH=/root/.affine/config
-      - REDIS_SERVER_HOST=redis
+      - REDIS_SERVER_HOST=affine_redis_1
       - DATABASE_URL=postgres://affine:affine@db:5432/affine
       - NODE_ENV=production
       - AFFINE_ADMIN_EMAIL=admin@umbrel.local
