--- a/affine/umbrel-app.yml
+++ b/affine/umbrel-app.yml
@@ -1,7 +1,7 @@
 manifestVersion: 1
 id: affine
 name: Affine
-tagline: Open Source Alternative to Notion, Miro, and Airtable
+tagline: Open source alternative to Notion, Miro, and Airtable
 category: files
 version: "0.14.2"
 port: 3013
