--- a/wireguard/umbrel-app.yml
+++ b/wireguard/umbrel-app.yml
@@ -41,7 +41,7 @@ description: >-
 developer: Emile Nijssen
 website: https://github.com/wg-easy/wg-easy
 submitter: Sharknoon
-submission: https://github.com/getumbrel/umbrel-apps/pull/<number>
+submission: https://github.com/getumbrel/umbrel-apps/pull/1084
 repo: https://github.com/wg-easy/wg-easy
 support: https://github.com/wg-easy/wg-easy/discussions
 gallery:
