--- a/saifa/docker-compose.yml
+++ b/saifa/docker-compose.yml
@@ -3,6 +3,8 @@ version: "3.7"
 services:
   app_proxy:
     environment:
+      APP_HOST: saifa_server_1
+      APP_PORT: 80
       PROXY_AUTH_ADD: "false"
 
   backend:
