--- a/saifa/docker-compose.yml
+++ b/saifa/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: saifa_server_1
+      APP_HOST: saifa_backend_1
       APP_PORT: 80
       PROXY_AUTH_ADD: "false"
 
