--- a/saifa/docker-compose.yml
+++ b/saifa/docker-compose.yml
@@ -3,11 +3,11 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: saifa_backend_1
+      APP_HOST: saifa_server_1
       APP_PORT: 80
       PROXY_AUTH_ADD: "false"
 
-  backend:
+  server:
     image: patranakamo/saifa-be:v1.3.3@sha256:95321f638a5198c66ec45e72adfe41dd7abbdc3ab611a88bdaa12976ed2b0242
     restart: on-failure
     stop_grace_period: 1m
@@ -31,7 +31,7 @@ services:
     ports:
       - "9989:80"
     depends_on:
-      - backend
+      - server
 
   redis:
     restart: on-failure
