--- a/saifa/docker-compose.yml
+++ b/saifa/docker-compose.yml
@@ -1,6 +1,12 @@
 version: "3.7"
 
 services:
+  app_proxy:
+    environment:
+      APP_HOST: saifa_frontend_1
+      APP_PORT: 80
+      PROXY_AUTH_ADD: "false"
+
   server:
     image: patranakamo/saifa-be:v1.3.3@sha256:95321f638a5198c66ec45e72adfe41dd7abbdc3ab611a88bdaa12976ed2b0242
     restart: on-failure
