--- a/saifa/docker-compose.yml
+++ b/saifa/docker-compose.yml
@@ -1,12 +1,11 @@
 version: "3.7"
 
 services:
-  app_proxy:
-    environment:
-      APP_HOST: saifa_frontend_1
-      APP_PORT: 9989
-      PROXY_AUTH_ADD: "false"
-
+#  app_proxy:
+#    environment:
+#      APP_HOST: saifa_frontend_1
+#      APP_PORT: 80
+#      PROXY_AUTH_ADD: "false"
   server:
     image: patranakamo/saifa-be:v1.3.3@sha256:95321f638a5198c66ec45e72adfe41dd7abbdc3ab611a88bdaa12976ed2b0242
     restart: on-failure
@@ -28,6 +27,8 @@ services:
   frontend:
     image: patranakamo/saifa-fe:v1.3.2@sha256:06ab9f0246e77a63a102111d00e2da7dfe1a94ed21032e56dbdc63dded9717bc
     restart: on-failure
+    ports:
+      - "9989:80"
     depends_on:
       - server
 
