--- a/saifa/docker-compose.yml
+++ b/saifa/docker-compose.yml
@@ -35,7 +35,7 @@ services:
 
   redis:
     restart: on-failure
-    image: redis:latest@sha256:f44e91787b843612a3878d8d8fae227b9db63f471214314f5b2e73576ca633d0
+    image: redis:7.2.4@sha256:f14f42fc7e824b93c0e2fe3cdf42f68197ee0311c3d2e0235be37480b2e208e6
     volumes:
       - ${APP_DATA_DIR}/redis_data:/data/redis_data
     environment:
