fix yaml error preventing app from showing in app store

--- a/saifa/umbrel-app.yml
+++ b/saifa/umbrel-app.yml
@@ -14,7 +14,7 @@ description: >-
   This system is crafted to streamline operations and facilitate a smoother transaction experience on the Lightning Network,
   
   making it an essential tool for developers looking to optimize their applications for better performance and user satisfaction.
-releaseNotes: : ""
+releaseNotes: ""
 developer: patra nakamo
 website: https://github.com/patranakamo
 email: patranakamo@gmail.com
