--- a/seafile/umbrel-app.yml
+++ b/seafile/umbrel-app.yml
@@ -23,7 +23,8 @@ description: >
 
   Seafile is configured to work out-of-the-box when installed on Umbrel. However, if you want to be able to upload files from a domain name that is not umbrel.local,
   open the Seafile app, go to System Admin > Settings and change "FILE_SERVER_ROOT" to /seafhttp.
-releaseNotes: ""
+releaseNotes: >-
+  This release updates Seafile from version 11.0.3 to 11.0.8. Full release notes can be found at https://manual.seafile.com/changelog/server-changelog/#1108-2024-04-22
 developer: Seafile
 website: https://www.seafile.com/
 dependencies: []
