update db host name

--- a/vikunja/docker-compose.yml
+++ b/vikunja/docker-compose.yml
@@ -23,7 +23,7 @@ services:
   api:
     image: vikunja/api:0.22.1@sha256:c9415431e6235229302bb8f9ee6660b74c24859d1e8adbc4a3e25bd418604b57
     environment:
-      VIKUNJA_DATABASE_HOST: db
+      VIKUNJA_DATABASE_HOST: vikunja_db_1
       VIKUNJA_DATABASE_PASSWORD: secret
       VIKUNJA_DATABASE_TYPE: mysql
       VIKUNJA_DATABASE_USER: vikunja
