Export ELEMENTS_DATA_DIR

--- a/peerswap/docker-compose.yml
+++ b/peerswap/docker-compose.yml
@@ -27,4 +27,4 @@ services:
     volumes:
       - ${APP_DATA_DIR}/data:/home/peerswap/.peerswap
       - ${APP_LIGHTNING_NODE_DATA_DIR}:/home/peerswap/.lnd:ro
-      - /home/umbrel/umbrel/app-data/elements/data:/home/peerswap/.elements:ro
+      - ${ELEMENTS_DATA_DIR}:/home/peerswap/.elements:ro
