simplify bind mounts

--- a/adguard-home/docker-compose.yml
+++ b/adguard-home/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     restart: on-failure
     network_mode: host
     volumes:
-      - ${APP_DATA_DIR}/data/adguardhome/data:/opt/adguardhome/work
-      - ${APP_DATA_DIR}/data/adguardhome/config:/opt/adguardhome/conf
+      - ${APP_DATA_DIR}/data/work:/opt/adguardhome/work
+      - ${APP_DATA_DIR}/data/conf:/opt/adguardhome/conf
     cap_add:
       - NET_ADMIN
