change category so it shows up in app store networking category

--- a/adguard-home/umbrel-app.yml
+++ b/adguard-home/umbrel-app.yml
@@ -1,6 +1,6 @@
 manifestVersion: 1
 id: adguard-home
-category: network
+category: networking
 name: AdGuard Home
 version: "0.107.48"
 tagline: Free and open source, powerful network-wide ads & trackers blocking DNS server.
