add to description and instructions

--- a/adguard-home/umbrel-app.yml
+++ b/adguard-home/umbrel-app.yml
@@ -3,10 +3,18 @@ id: adguard-home
 category: networking
 name: AdGuard Home
 version: "0.107.48"
-tagline: Free and open source, powerful network-wide ads & trackers blocking DNS server.
+tagline: Network-wide software for blocking ads and tracking
 description: >-
-  AdGuard Home is a network-wide software for blocking ads and tracking. After you set it up, it'll cover ALL your home devices, and you don't need any client-side software for that.
-  It operates as a DNS server that re-routes tracking domains to a “black hole”, thus preventing your devices from connecting to those servers. It's based on software we use for our public AdGuard DNS servers, and both share a lot of code.
+  AdGuard Home is a comprehensive solution designed to block ads and tracking across all devices in your home network. As the world increasingly embraces the Internet of Things,
+  with a growing number of connected devices, maintaining control over your entire network is crucial. AdGuard Home empowers you to manage this with ease, ensuring a secure and
+  clutter-free browsing experience for every device under your roof.
+
+
+  🛠️ SET-UP INSTRUCTIONS
+
+  In the setup wizard, it is important to set the "Port" of the Admin Web Interface to 8095.
+  This ensures that the app will not conflict with other apps from the Umbrel App Store, and that the app will be accessible
+  when clicking on the app icon in the umbrelOS homescreen.
 releaseNotes: >-
   - Access settings not being applied to encrypted protocols (#6890)
 developer: Adguard
