remove release notes for initial app launch

--- a/adguard-home/umbrel-app.yml
+++ b/adguard-home/umbrel-app.yml
@@ -15,8 +15,7 @@ description: >-
   In the setup wizard, it is important to set the "Port" of the Admin Web Interface to 8095.
   This ensures that the app will not conflict with other apps from the Umbrel App Store, and that the app will be accessible
   when clicking on the app icon in the umbrelOS homescreen.
-releaseNotes: >-
-  - Access settings not being applied to encrypted protocols (#6890)
+releaseNotes: ""
 developer: Adguard
 website: https://adguard.com/fr/adguard-home/overview.html
 dependencies: []
