add submission PR link

--- a/adguard-home/umbrel-app.yml
+++ b/adguard-home/umbrel-app.yml
@@ -30,4 +30,4 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 submitter: Julienpeps
-submission: TODO
+submission: https://github.com/getumbrel/umbrel-apps/pull/1038
