Added [] to dependecies

--- a/libretranslate/umbrel-app.yml
+++ b/libretranslate/umbrel-app.yml
@@ -11,7 +11,7 @@ description: >-
 
 developer: Piero Toffanin and Seth Falco
 website: https://libretranslate.com
-dependencies:
+dependencies: []
 repo: https://github.com/LibreTranslate/LibreTranslate
 support: https://github.com/LibreTranslate/LibreTranslate/discussions
 port: 7017
