Changed restart from "unless-stopped" to "on-failure"

--- a/libretranslate/docker-compose.yml
+++ b/libretranslate/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       PROXY_AUTH_ADD: "false"
   main:
     image: libretranslate/libretranslate:v1.5.6
-    restart: unless-stopped
+    restart: on-failure
 
     ## Uncomment this for logging in docker compose logs
     # tty: true
