--- a/libretranslate/docker-compose.yml
+++ b/libretranslate/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 5000
       PROXY_AUTH_ADD: "false"
   main:
-    image: libretranslate/libretranslate:v1.5.6
+    image: libretranslate/libretranslate:v1.5.7@sha256:f2ac0b1944da971b3bf1344ec02842800883f2046cdefa868d7dc46a9dff6ed8
     restart: on-failure
 
     ## Uncomment this for logging in docker compose logs
