Added digest and updated to 0.22

--- a/memos/docker-compose.yml
+++ b/memos/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       PROXY_AUTH_WHITELIST: "/api/*"
 
   main:
-    image: neosmemo/memos:0.21
+    image: neosmemo/memos:0.22@sha256:fce61c2fd067f57986b7c219a3a186e01dbc47354c09747612732d8e4808176e
     restart: on-failure
     stop_grace_period: 1m
     volumes:
