--- a/memos/umbrel-app.yml
+++ b/memos/umbrel-app.yml
@@ -3,7 +3,7 @@ id: memos
 category: files
 name: Memos
 version: "0.22"
-tagline: Easily capture and share your great thoughts.
+tagline: Easily capture and share your great thoughts
 description: >-
   A privacy-first, lightweight note-taking service.
   Easily capture and share your great thoughts.
