--- a/memos/docker-compose.yml
+++ b/memos/docker-compose.yml
@@ -15,5 +15,5 @@ services:
     restart: on-failure
     stop_grace_period: 1m
     volumes:
-      - ${APP_DATA_DIR}:/var/opt/memos
+      - ${APP_DATA_DIR}/data:/var/opt/memos
 
