--- a/memos/umbrel-app.yml
+++ b/memos/umbrel-app.yml
@@ -8,15 +8,15 @@ description: >-
   A privacy-first, lightweight note-taking service.
   Easily capture and share your great thoughts.
 
-  Open source and free forever. Embrace a future where creativity knows no boundaries with our open-source solution – free today, tomorrow, and always.
+  - Open source and free forever. Embrace a future where creativity knows no boundaries with our open-source solution – free today, tomorrow, and always.
 
-  Self-hosting with Docker in just seconds. Enjoy the flexibility, scalability, and ease of setup that Docker provides, allowing you to have full control over your data and privacy.
+  - Self-hosting with Docker in just seconds. Enjoy the flexibility, scalability, and ease of setup that Docker provides, allowing you to have full control over your data and privacy.
 
-  Pure text with added Markdown support. Say goodbye to the overwhelming mental burden of rich formatting and embrace a minimalist approach.
+  - Pure text with added Markdown support. Say goodbye to the overwhelming mental burden of rich formatting and embrace a minimalist approach.
 
-  Customize and share your notes effortlessly. With our intuitive sharing features, you can easily collaborate and distribute your notes with others.
+  - Customize and share your notes effortlessly. With our intuitive sharing features, you can easily collaborate and distribute your notes with others.
 
-  RESTful API for third-party services. Embrace the power of integration and unleash new possibilities with our RESTful API support.
+  - RESTful API for third-party services. Embrace the power of integration and unleash new possibilities with our RESTful API support.
 
 developer: boojack
 website: https://www.usememos.com/
