--- a/technitium-dns/docker-compose.yml
+++ b/technitium-dns/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       APP_HOST: technitium-dns_dns-server_1
       APP_PORT: 5380
   dns-server:
-    image: technitium/dns-server:12.1
+    image: technitium/dns-server:12.1@sha256:f5de7eea6dd85f85656a1ea7584c6af0619bb8b1fa83e5c7992fcf38b76c7ccf
 
     ports:
       # (proxied) - "5380:5380/tcp" #DNS web console (HTTP)
