Changed restart from unless-stopped to on-failure

--- a/technitium-dns/docker-compose.yml
+++ b/technitium-dns/docker-compose.yml
@@ -41,6 +41,6 @@ services:
       # - DNS_SERVER_LOG_USING_LOCAL_TIME=true #Enable this option to use local time instead of UTC for logging.
     volumes:
       - ${APP_DATA_DIR}/data:/etc/dns
-    restart: unless-stopped
+    restart: on-failure
     sysctls:
       - net.ipv4.ip_local_port_range=1024 65000
