--- a/just-download/umbrel-app.yml
+++ b/just-download/umbrel-app.yml
@@ -5,7 +5,7 @@ name: Just. Download.
 version: "1.0.5"
 tagline: Download torrents. Just. Download.
 description: >-
-  Just Download allows you to easily download movies, books, games, etc. from your favourite indexers. It acts as a bridge betweeb a Torznab feed (Jackett is recommended for making these and transmission.
+  Just Download allows you to easily download movies, books, games, etc. from your favourite indexers. It acts as a bridge between a Torznab feed (Jackett is recommended for making these) and transmission.
 
   You just search, press download and you're done!
 developer: highghlow
