Align default data directory

--- a/wireguard/docker-compose.yml
+++ b/wireguard/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     ports:
       - "51820:51820/udp"
     volumes:
-      - ${APP_DATA_DIR}/app/wireguard:/etc/wireguard
+      - ${APP_DATA_DIR}/data/wireguard:/etc/wireguard
     environment:
       WG_HOST: ${DEVICE_DOMAIN_NAME}
     cap_add:
