Align volume files

--- a/umami/docker-compose.yml
+++ b/umami/docker-compose.yml
@@ -27,4 +27,4 @@ services:
       POSTGRES_USER: umami
       POSTGRES_PASSWORD: umami
     volumes:
-      - ${APP_DATA_DIR}/db/data:/var/lib/postgresql/data
+      - ${APP_DATA_DIR}/data/db:/var/lib/postgresql/data
