--- a/localai/docker-compose.yml
+++ b/localai/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 8080
       PROXY_AUTH_WHITELIST: "/v1/*"
   api:
-    image: localai/localai:v2.14.0-aio-cpu
+    image: localai/localai:v2.14.0-aio-cpu@sha256:b0366517053d5aadd093f1afb3143484bf7e6eaec163de6d71f547dc234fe18d
     # For a specific version:
     # image: localai/localai:v2.14.0-aio-cpu
     # For Nvidia GPUs decomment one of the following (cuda11 or cuda12):
