Added /data to bind mounts

--- a/localai/docker-compose.yml
+++ b/localai/docker-compose.yml
@@ -24,4 +24,4 @@ services:
       - DEBUG=true
       # ...
     volumes:
-      - ${APP_DATA_DIR}/models:/build/models:cached
+      - ${APP_DATA_DIR}/data/models:/build/models:cached
