Moved mount source to /downloads

--- a/home-assistant/docker-compose.yml
+++ b/home-assistant/docker-compose.yml
@@ -8,5 +8,5 @@ services:
     privileged: true
     volumes:
       - ${APP_DATA_DIR}/data:/config
-      - ${UMBREL_ROOT}/data/storage/homeassistant-media:/media # getumbrel/umbrel#1800
+      - ${UMBREL_ROOT}/data/storage/downloads:/media # getumbrel/umbrel#1800
       - /dev:/dev
