show user their password

--- a/saifa/umbrel-app.yml
+++ b/saifa/umbrel-app.yml
@@ -30,7 +30,7 @@ gallery:
   - 3.jpg
 path: ""
 defaultUsername: ""
-defaultPassword: ""
+deterministicPassword: true
 submitter: patra nakamo
 torOnly: false
 submission: https://github.com/getumbrel/umbrel/pull/1021
