add whitespace to app description

--- a/saifa/umbrel-app.yml
+++ b/saifa/umbrel-app.yml
@@ -7,13 +7,14 @@ tagline: Simple, webhook for connect with invoice and invoice lightning network 
 description: >-
   Saifa is designed to enhance the interoperability and efficiency of applications interacting with the Lightning Network Daemon (LND).
   
+
   Our project simplifies the integration process, allowing applications to seamlessly connect to LND through an intuitive webhook system. 
   
+
   With Saifa, users can effortlessly create new invoices using a straightforward REST API, cancel invoices, and receive real-time updates on invoice status.
   
-  This system is crafted to streamline operations and facilitate a smoother transaction experience on the Lightning Network,
-  
-  making it an essential tool for developers looking to optimize their applications for better performance and user satisfaction.
+
+  This system is crafted to streamline operations and facilitate a smoother transaction experience on the Lightning Network, making it an essential tool for developers looking to optimize their applications for better performance and user satisfaction.
 releaseNotes: ""
 developer: patra nakamo
 website: https://github.com/patranakamo
