Shorten homescreen name so it is fully visible

--- a/saifa/umbrel-app.yml
+++ b/saifa/umbrel-app.yml
@@ -1,7 +1,7 @@
 manifestVersion: 1
 id: saifa
 category: bitcoin
-name: Saifa - invoice lightning network manager
+name: Saifa
 version: "1.0.0"
 tagline: Simple, webhook for connect with invoice and invoice lightning network manager
 description: >-
