move part of name to tagline

--- a/saifa/umbrel-app.yml
+++ b/saifa/umbrel-app.yml
@@ -3,7 +3,7 @@ id: saifa
 category: bitcoin
 name: Saifa
 version: "1.0.0"
-tagline: Simple, webhook for connect with invoice and invoice lightning network manager
+tagline: Invoice lightning network manager
 description: >-
   Saifa is designed to enhance the interoperability and efficiency of applications interacting with the Lightning Network Daemon (LND).
   
