add host network mode comment

--- a/plex/docker-compose.yml
+++ b/plex/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - PUID=1000
       - PGID=1000
       - VERSION=docker
+    # Currently running in host network mode to allow for UPnP discovery (Plex DLNA server) and so that Docker does not complain about port 1900/udp being in use (can be shared, for example with Home Assistant).
     # ports:
     #   - 32400:32400
     #   # Plex Companion
