Updated tailscale to v1.66.0

--- a/tailscale/umbrel-app.yml
+++ b/tailscale/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: tailscale
 category: networking
 name: Tailscale
-version: "v1.62.1"
+version: "v1.66.0"
 tagline: Zero config VPN to access your Umbrel from anywhere
 description: >-
   Tailscale is zero config VPN that creates a secure network between
@@ -28,13 +28,11 @@ path: ""
 deterministicPassword: false
 torOnly: false
 releaseNotes: |
-  This release updates Tailscale from v1.56.1 to v1.62.1, and includes: 
+  This release updates Tailscale from v1.62.1 to v1.66.0, and includes: 
 
-  - Enhanced Access Control: Enhanced security with Access Control Lists (ACLs) for managing permissions on tagged devices.
+  - Security Update: This release includes a fix for TS-2024-005. All users are advised to update.
 
-  - Expanded DNS Options: Added Mullvad's family-friendly server to the list of well known DNS over HTTPS (DoH) servers.
-
-  - Improved Request Handling: DNS over HTTP requests now come with a set timeout.
+  - ACL Syntax Updates: As part of a security fix to address an issue related to exit nodes and subnet routing (TS-2024-005), changes are made to ACLs.
 
   - and more!
 
