tweak release notes

--- a/tailscale/umbrel-app.yml
+++ b/tailscale/umbrel-app.yml
@@ -28,14 +28,9 @@ path: ""
 deterministicPassword: false
 torOnly: false
 releaseNotes: |
-  This release updates Tailscale from v1.62.1 to v1.66.0, and includes: 
-
-  - Security Update: This release includes a fix for TS-2024-005. All users are advised to update.
-
-  - ACL Syntax Updates: As part of a security fix to address an issue related to exit nodes and subnet routing (TS-2024-005), changes are made to ACLs.
-
-  - and more!
-
+  This release updates Tailscale from v1.62.1 to v1.66.0, and includes.
+  
+  
   Full release notes and detailed information is available at https://github.com/tailscale/tailscale/releases
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/1248
