--- a/tailscale/umbrel-app.yml
+++ b/tailscale/umbrel-app.yml
@@ -28,7 +28,7 @@ path: ""
 deterministicPassword: false
 torOnly: false
 releaseNotes: |
-  This release updates Tailscale from v1.62.1 to v1.66.0, and includes.
+  This release updates Tailscale from v1.62.1 to v1.66.0.
   
   
   Full release notes and detailed information is available at https://github.com/tailscale/tailscale/releases
