--- a/yucca/docker-compose.yml
+++ b/yucca/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   yucca:
-    image: yuccastream/yucca:0.10.0
+    image: yuccastream/yucca:0.10.0@sha256:9551f42cf20aa1d11bf0df6ba5996cc10f506c8225a60a448876cebefe539eb2
     restart: on-failure
     shm_size: "128mb"
     volumes:
