--- a/yucca/docker-compose.yml
+++ b/yucca/docker-compose.yml
@@ -1,6 +1,11 @@
 version: "3.8"
 
 services:
+  app_proxy:
+    environment:
+      APP_HOST: yucca_yucca_1
+      APP_PORT: 9910
+
   yucca:
     image: yuccastream/yucca:0.10.0@sha256:9551f42cf20aa1d11bf0df6ba5996cc10f506c8225a60a448876cebefe539eb2
     restart: on-failure
@@ -9,7 +14,6 @@ services:
       - "${APP_DATA_DIR}/data/data:/opt/yucca/data"
       - "${APP_DATA_DIR}/data/ffmpeg:/opt/yucca/ffmpeg"
     ports:
-      - 9910:9910 # Web UI
-      - 9912:9912 # Telemetry
-      - 1525:1025 # SMTP server
-    environment: {} # Read more about configuration here https://docs.yucca.app/en/configuration/
+      - 10925:10925 # SMTP server
+    environment: # Read more about configuration here https://docs.yucca.app/en/configuration/
+      YUCCA_SMTP_SERVER_LISTEN_ADDRESS: ":10925"
