--- a/scanservjs/docker-compose.yml
+++ b/scanservjs/docker-compose.yml
@@ -12,4 +12,6 @@ services:
     stop_grace_period: 1m
     volumes:
       - /var/run/dbus:/var/run/dbus
-    priveleged: true # IDK, their docker guide told me to do that
+      - ${APP_DATA_DIR}/data/scans:/var/lib/scanservjs/output
+      - ${APP_DATA_DIR}/data/cfg:/etc/scanservjs
+    priveleged: true # It's for accessing usb-connected scanners
