--- a/scanservjs/docker-compose.yml
+++ b/scanservjs/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 8080
 
   server:
-    image: sbs20/scanservjs:v3.0.3 # target: latest #!
+    image: sbs20/scanservjs:v3.0.3@sha256:dad1fd6e9a98957d324499e822a3019cc43d6557e314635c82665baf576b960e # target: latest #!
     restart: on-failure
     stop_grace_period: 1m
     volumes:
