update release notes

--- a/bitcoin-knots/umbrel-app.yml
+++ b/bitcoin-knots/umbrel-app.yml
@@ -27,9 +27,9 @@ gallery:
 path: ""
 defaultPassword: ""
 releaseNotes: >-
-  This release updates Bitcoin Knots to version 26.1.knots20240513
+  This update includes minor changes to the descriptions of Advanced Settings parameters that were introduced in the previous release (26.1.1).
   
   
-  Full release notes can be found at https://github.com/bitcoinknots/bitcoin/blob/v26.1.knots20240513/doc/release-notes.md
+  Full release notes for Bitcoin Knots can be found at https://github.com/bitcoinknots/bitcoin/blob/v26.1.knots20240513/doc/release-notes.md
 submitter: Léo Haf
 submission: https://github.com/getumbrel/umbrel-apps/pull/953
