tweak main data bind mount

--- a/gladys-assistant/docker-compose.yml
+++ b/gladys-assistant/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     network_mode: host
     cgroup: host
     volumes:
-      - ${APP_DATA_DIR}/gladysassistant:/var/lib/gladysassistant
+      - ${APP_DATA_DIR}/data/gladysassistant:/var/lib/gladysassistant
       - /var/run/docker.sock:/var/run/docker.sock
       - /dev:/dev
       - /run/udev:/run/udev:ro
