add multiarch image digest

--- a/gladys-assistant/docker-compose.yml
+++ b/gladys-assistant/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
   web:
-    image: gladysassistant/gladys:v4
+    image: gladysassistant/gladys:v4@sha256:f694d49bf57426cfc37590eb71a19b0e183cd3e8cbae966ef093bb3d199d318b
     restart: on-failure
     stop_grace_period: 1m
     privileged: true
