Added [] to deps: technitium-dns/umbrel-app.yml
Co-authored-by: Nathan Fretz <nmfretz@gmail.com>

--- a/technitium-dns/umbrel-app.yml
+++ b/technitium-dns/umbrel-app.yml
@@ -9,7 +9,7 @@ description: >-
 
 developer: Shreyas Zare
 website: https://technitium.com/dns/
-dependencies:
+dependencies: []
 repo: https://github.com/TechnitiumSoftware/DnsServer
 support: https://github.com/TechnitiumSoftware/DnsServer/discussions
 port: 5380
