Fixed the password
Co-authored-by: Nathan Fretz <nmfretz@gmail.com>

--- a/technitium-dns/umbrel-app.yml
+++ b/technitium-dns/umbrel-app.yml
@@ -18,8 +18,8 @@ gallery:
   - 2.jpg
   - 3.jpg
 path: ""
-defaultUsername: ""
-defaultPassword: ""
+defaultUsername: admin
+deterministicPassword: true
 submitter: highghlow
 submission: https://github.com/getumbrel/umbrel/pull/1046
 
