--- a/pocketbase/umbrel-app.yml
+++ b/pocketbase/umbrel-app.yml
@@ -27,7 +27,7 @@ description: >-
   🧩 Extendable
   
   Use as a standalone app OR as a framework, that you can extend via Go and JavaScript hooks to create your own custom portable backend.
-developer: Gani
+developer: PocketBase
 website: https://pocketbase.io/
 submitter: Sharknoon
 submission: https://github.com/getumbrel/umbrel-apps/pull/1082
