--- a/umami/docker-compose.yml
+++ b/umami/docker-compose.yml
@@ -8,7 +8,8 @@ services:
       PROXY_AUTH_ADD: "false"
   
   app:
-    image: ghcr.io/umami-software/umami:postgresql-latest@sha256:4fd4bbf741a10c1109eb8387a8aa90f9a40d673972dc268ebd97e41e5b045c0c
+    image: ghcr.io/umami-software/umami:postgresql-v2.11.3@sha256:4fd4bbf741a10c1109eb8387a8aa90f9a40d673972dc268ebd97e41e5b045c0c
+    user: "1000:1000"
     restart: on-failure
     stop_grace_period: 1m
     environment:
