Added note about exposing

--- a/umami/umbrel-app.yml
+++ b/umami/umbrel-app.yml
@@ -16,6 +16,10 @@ description: >-
 
   Change the default password by clicking on the avatar in the top right corner and on 'profile'.
 
+  You may need to expose Umami to the web in order to use the app in it's intended way with websites using Umami.
+
+  The easiest way to do this is to use the 'Cloudflare Tunnel' app from the umbrel app store, and expose the Umami app using your own domain.
+
 
   😌 Easy to use
   
