chore: update Thunderhub to v0.13.31

--- a/thunderhub/umbrel-app.yml
+++ b/thunderhub/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: thunderhub
 category: bitcoin
 name: ThunderHub
-version: "0.13.30"
+version: "0.13.31"
 tagline: Take full control of your Lightning node
 description: >-
   ThunderHub allows you to take full control of your Lightning node
@@ -28,12 +28,16 @@ path: ""
 defaultUsername: ""
 deterministicPassword: true
 releaseNotes: >-
-  - Chore: Extra error log
+  - feat: Taproot swaps
   
-  - Fix: Boltz swap claim transaction fees
+  - chore: show ghost error to user
   
-  - Fix: Adding safety on object lookups
+  - chore: update package lock
+
+  - chore: remove swap backup
+
+  - fix: bump dep, don't work with Node.js ^21.0.0 fix
   
-  Full release notes can be found at https://github.com/apotdevin/thunderhub/releases/tag/v0.13.30
+  Full release notes can be found at https://github.com/apotdevin/thunderhub/releases/tag/v0.13.31
 submitter: Anthony Potdevin
 submission: https://github.com/getumbrel/umbrel/pull/343
