Update submission url

--- a/myspeed/umbrel-app.yml
+++ b/myspeed/umbrel-app.yml
@@ -35,4 +35,4 @@ gallery:
   - 2.jpg
   - 3.jpg
 submitter: Mathias Wagner
-submission: https://github.com/getumbrel/umbrel/pull/<unkown>
+submission: https://github.com/getumbrel/umbrel-apps/pull/1103
