--- a/thunderhub/umbrel-app.yml
+++ b/thunderhub/umbrel-app.yml
@@ -28,15 +28,8 @@ path: ""
 defaultUsername: ""
 deterministicPassword: true
 releaseNotes: >-
-  - feat: Taproot swaps
-  
-  - chore: show ghost error to user
-  
-  - chore: update package lock
+  This release upgrades Boltz Swaps to Taproot for cheaper and more private swaps. The upgrade is backwards compatible, so existing swaps that are pending before the upgrade will complete without issue.
 
-  - chore: remove swap backup
-
-  - fix: bump dep, don't work with Node.js ^21.0.0 fix
   
   Full release notes can be found at https://github.com/apotdevin/thunderhub/releases/tag/v0.13.31
 submitter: Anthony Potdevin
