--- a/maybe/umbrel-app.yml
+++ b/maybe/umbrel-app.yml
@@ -1,8 +1,8 @@
 manifestVersion: 1
 id: maybe
 category: finance
-name: Maybe personal finance
-version: '3.3.0'
+name: Maybe
+version: 'v0.1.0-alpha.2'
 tagline: Open-source OS for your personal finances
 description: >-
   Maybe Maybe is a fully (your finances are secure)
@@ -12,10 +12,10 @@ releaseNotes: >-
   Alpha
 developer: Maybe
 website: https://maybe.co/
-dependencies:
+dependencies: []
 repo: https://github.com/maybe-finance
 support: https://github.com/maybe-finance/discussions
-port: 3000
+port: 3063
 gallery:
   - 1.jpg
   - 2.jpg
