allow .env file for setting SYNTH_API_KEY

--- a/maybe/docker-compose.yml
+++ b/maybe/docker-compose.yml
@@ -12,6 +12,8 @@ services:
     stop_grace_period: 1m
     volumes:
       - ${APP_DATA_DIR}/data/rails:/rails/storage
+    env_file:
+      - ${APP_DATA_DIR}/.env
     environment:
       SELF_HOSTING_ENABLED: true
       PORT: 3063
