--- a/saifa/umbrel-app.yml
+++ b/saifa/umbrel-app.yml
@@ -3,7 +3,7 @@ id: saifa
 category: bitcoin
 name: Saifa
 version: "1.0.0"
-tagline: Invoice lightning network manager
+tagline: Lightning network invoice manager
 description: >-
   Saifa is designed to enhance the interoperability and efficiency of applications interacting with the Lightning Network Daemon (LND).
   
