Fix .jng --> .jpg

--- a/adguard-home/umbrel-app.yml
+++ b/adguard-home/umbrel-app.yml
@@ -23,9 +23,9 @@ repo: https://github.com/AdguardTeam/AdGuardHome
 support: https://github.com/AdguardTeam/AdGuardHome/issues
 port: 8095
 gallery:
-  - 1.jng
-  - 2.jng
-  - 3.jng
+  - 1.jpg
+  - 2.jpg
+  - 3.jpg
 path: ""
 defaultUsername: ""
 defaultPassword: ""
