Tweak app description

--- a/adguard-home/umbrel-app.yml
+++ b/adguard-home/umbrel-app.yml
@@ -5,6 +5,9 @@ name: AdGuard Home
 version: "0.107.48"
 tagline: Network-wide software for blocking ads and tracking
 description: >-
+  ⚠️ See below for important set-up instructions.
+
+  
   AdGuard Home is a comprehensive solution designed to block ads and tracking across all devices in your home network. As the world increasingly embraces the Internet of Things,
   with a growing number of connected devices, maintaining control over your entire network is crucial. AdGuard Home empowers you to manage this with ease, ensuring a secure and
   clutter-free browsing experience for every device under your roof.
