--- a/libretranslate/umbrel-app.yml
+++ b/libretranslate/umbrel-app.yml
@@ -9,7 +9,7 @@ description: >-
   Unlike other APIs, it doesn't rely on proprietary providers such as Google or Azure to perform translations.
   Instead, its translation engine is powered by the open source Argos Translate library.
 
-developer: Piero Toffanin and Seth Falco
+developer: LibreTranslate Contributors
 website: https://libretranslate.com
 dependencies: []
 repo: https://github.com/LibreTranslate/LibreTranslate
