--- a/libretranslate/umbrel-app.yml
+++ b/libretranslate/umbrel-app.yml
@@ -8,7 +8,7 @@ description: >-
   ⚠️ This app may take up to 10 minutes or more to become accessible after installation, depending on your hardware and internet connection. LibreTranslate must first download around 10 GB of translation models in the background before the UI becomes available. Please be patient.
 
 
-  Free and Open Source Machine Translation API, entirely self-hosted.
+  LibreTranslate is a free and Open Source Machine Translation API, entirely self-hosted.
   Unlike other APIs, it doesn't rely on proprietary providers such as Google or Azure to perform translations.
   Instead, its translation engine is powered by the open source Argos Translate library.
 
