add proper capitalization to app name

--- a/libretranslate/umbrel-app.yml
+++ b/libretranslate/umbrel-app.yml
@@ -1,7 +1,7 @@
 manifestVersion: 1.1
 id: libretranslate
 category: ai
-name: Libretranslate
+name: LibreTranslate
 version: "1.5.7"
 ragline: Free and Open Source machine translation API
 description: >-
