--- a/libretranslate/umbrel-app.yml
+++ b/libretranslate/umbrel-app.yml
@@ -3,7 +3,7 @@ id: libretranslate
 category: ai
 name: LibreTranslate
 version: "1.5.7"
-ragline: Free and Open Source machine translation API
+tagline: Free and Open Source machine translation API
 description: >-
   ⚠️ This app may take up to 10 minutes or more to become accessible after installation, depending on your hardware and internet connection. LibreTranslate must first download around 10 GB of translation models in the background before the UI becomes available. Please be patient.
 
