--- a/memos/umbrel-app.yml
+++ b/memos/umbrel-app.yml
@@ -18,7 +18,7 @@ description: >-
 
   - RESTful API for third-party services. Embrace the power of integration and unleash new possibilities with our RESTful API support.
 
-developer: boojack
+developer: Memos
 website: https://www.usememos.com/
 dependencies:
 repo: https://github.com/usememos/memos
