add empty array for dependencies

--- a/memos/umbrel-app.yml
+++ b/memos/umbrel-app.yml
@@ -20,7 +20,7 @@ description: >-
 
 developer: Memos
 website: https://www.usememos.com/
-dependencies:
+dependencies: []
 repo: https://github.com/usememos/memos
 support: https://github.com/usememos/memos/discussions
 port: 5230
